uploading changes to files

--- a/cpi_project.ipynb
+++ b/cpi_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -60,79 +60,193 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>352.125</td>\n",
-       "      <td>353.332</td>\n",
-       "      <td>355.109</td>\n",
-       "      <td>357.725</td>\n",
-       "      <td>358.741</td>\n",
-       "      <td>360.277</td>\n",
-       "      <td>361.296</td>\n",
-       "      <td>362.709</td>\n",
-       "      <td>364.493</td>\n",
-       "      <td>365.443</td>\n",
-       "      <td>366.574</td>\n",
-       "      <td>367.831</td>\n",
-       "      <td>360.471</td>\n",
-       "      <td>356.218</td>\n",
-       "      <td>364.724</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>288.915</td>\n",
+       "      <td>289.660</td>\n",
+       "      <td>290.936</td>\n",
+       "      <td>291.511</td>\n",
+       "      <td>292.280</td>\n",
+       "      <td>292.729</td>\n",
+       "      <td>293.165</td>\n",
+       "      <td>293.548</td>\n",
+       "      <td>293.979</td>\n",
+       "      <td>294.332</td>\n",
+       "      <td>294.580</td>\n",
+       "      <td>295.019</td>\n",
+       "      <td>292.554</td>\n",
+       "      <td>291.005</td>\n",
+       "      <td>294.104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>369.294</td>\n",
-       "      <td>371.743</td>\n",
-       "      <td>373.265</td>\n",
-       "      <td>375.066</td>\n",
-       "      <td>375.869</td>\n",
-       "      <td>378.241</td>\n",
-       "      <td>379.331</td>\n",
-       "      <td>380.668</td>\n",
-       "      <td>381.832</td>\n",
-       "      <td>382.524</td>\n",
-       "      <td>384.010</td>\n",
-       "      <td>384.958</td>\n",
-       "      <td>378.067</td>\n",
-       "      <td>373.913</td>\n",
-       "      <td>382.221</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>295.013</td>\n",
+       "      <td>295.468</td>\n",
+       "      <td>295.811</td>\n",
+       "      <td>296.433</td>\n",
+       "      <td>297.487</td>\n",
+       "      <td>297.973</td>\n",
+       "      <td>298.280</td>\n",
+       "      <td>298.911</td>\n",
+       "      <td>299.477</td>\n",
+       "      <td>299.905</td>\n",
+       "      <td>300.434</td>\n",
+       "      <td>300.730</td>\n",
+       "      <td>297.994</td>\n",
+       "      <td>296.364</td>\n",
+       "      <td>299.623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>385.738</td>\n",
-       "      <td>386.813</td>\n",
-       "      <td>387.573</td>\n",
-       "      <td>389.571</td>\n",
-       "      <td>390.476</td>\n",
-       "      <td>391.458</td>\n",
-       "      <td>392.021</td>\n",
-       "      <td>392.128</td>\n",
-       "      <td>391.998</td>\n",
-       "      <td>391.973</td>\n",
-       "      <td>391.008</td>\n",
-       "      <td>391.045</td>\n",
-       "      <td>390.150</td>\n",
-       "      <td>388.605</td>\n",
-       "      <td>391.696</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>301.367</td>\n",
+       "      <td>302.079</td>\n",
+       "      <td>301.907</td>\n",
+       "      <td>302.351</td>\n",
+       "      <td>302.717</td>\n",
+       "      <td>303.586</td>\n",
+       "      <td>304.888</td>\n",
+       "      <td>305.757</td>\n",
+       "      <td>306.388</td>\n",
+       "      <td>307.260</td>\n",
+       "      <td>308.346</td>\n",
+       "      <td>308.746</td>\n",
+       "      <td>304.616</td>\n",
+       "      <td>302.335</td>\n",
+       "      <td>306.898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>309.380</td>\n",
+       "      <td>310.319</td>\n",
+       "      <td>311.712</td>\n",
+       "      <td>312.195</td>\n",
+       "      <td>313.094</td>\n",
+       "      <td>314.217</td>\n",
+       "      <td>315.232</td>\n",
+       "      <td>316.270</td>\n",
+       "      <td>316.513</td>\n",
+       "      <td>317.756</td>\n",
+       "      <td>318.482</td>\n",
+       "      <td>320.054</td>\n",
+       "      <td>314.602</td>\n",
+       "      <td>311.820</td>\n",
+       "      <td>317.385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>321.164</td>\n",
+       "      <td>322.208</td>\n",
+       "      <td>323.991</td>\n",
+       "      <td>324.650</td>\n",
+       "      <td>326.181</td>\n",
+       "      <td>327.527</td>\n",
+       "      <td>329.324</td>\n",
+       "      <td>330.770</td>\n",
+       "      <td>331.974</td>\n",
+       "      <td>332.895</td>\n",
+       "      <td>334.464</td>\n",
+       "      <td>335.713</td>\n",
+       "      <td>328.405</td>\n",
+       "      <td>324.287</td>\n",
+       "      <td>332.523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>337.578</td>\n",
+       "      <td>338.948</td>\n",
+       "      <td>339.298</td>\n",
+       "      <td>340.053</td>\n",
+       "      <td>340.212</td>\n",
+       "      <td>341.127</td>\n",
+       "      <td>343.367</td>\n",
+       "      <td>345.138</td>\n",
+       "      <td>346.393</td>\n",
+       "      <td>347.782</td>\n",
+       "      <td>349.168</td>\n",
+       "      <td>350.535</td>\n",
+       "      <td>343.300</td>\n",
+       "      <td>339.536</td>\n",
+       "      <td>347.064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>352.105</td>\n",
+       "      <td>353.312</td>\n",
+       "      <td>355.088</td>\n",
+       "      <td>357.704</td>\n",
+       "      <td>358.720</td>\n",
+       "      <td>360.256</td>\n",
+       "      <td>361.275</td>\n",
+       "      <td>362.689</td>\n",
+       "      <td>364.472</td>\n",
+       "      <td>365.422</td>\n",
+       "      <td>366.553</td>\n",
+       "      <td>367.809</td>\n",
+       "      <td>360.450</td>\n",
+       "      <td>356.198</td>\n",
+       "      <td>364.703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>369.273</td>\n",
+       "      <td>371.721</td>\n",
+       "      <td>373.243</td>\n",
+       "      <td>375.044</td>\n",
+       "      <td>375.847</td>\n",
+       "      <td>378.219</td>\n",
+       "      <td>379.309</td>\n",
+       "      <td>380.646</td>\n",
+       "      <td>381.810</td>\n",
+       "      <td>382.502</td>\n",
+       "      <td>383.988</td>\n",
+       "      <td>384.936</td>\n",
+       "      <td>378.045</td>\n",
+       "      <td>373.891</td>\n",
+       "      <td>382.199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>385.716</td>\n",
+       "      <td>386.791</td>\n",
+       "      <td>387.550</td>\n",
+       "      <td>389.549</td>\n",
+       "      <td>390.454</td>\n",
+       "      <td>391.436</td>\n",
+       "      <td>391.998</td>\n",
+       "      <td>392.106</td>\n",
+       "      <td>391.975</td>\n",
+       "      <td>391.950</td>\n",
+       "      <td>390.986</td>\n",
+       "      <td>391.023</td>\n",
+       "      <td>390.128</td>\n",
+       "      <td>388.583</td>\n",
+       "      <td>391.673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>2021</td>\n",
-       "      <td>391.601</td>\n",
-       "      <td>392.372</td>\n",
-       "      <td>392.227</td>\n",
-       "      <td>391.614</td>\n",
-       "      <td>392.634</td>\n",
-       "      <td>394.234</td>\n",
-       "      <td>395.231</td>\n",
-       "      <td>395.806</td>\n",
-       "      <td>396.130</td>\n",
-       "      <td>397.170</td>\n",
-       "      <td>399.307</td>\n",
-       "      <td>400.507</td>\n",
-       "      <td>394.903</td>\n",
-       "      <td>392.447</td>\n",
-       "      <td>397.359</td>\n",
+       "      <td>391.579</td>\n",
+       "      <td>392.349</td>\n",
+       "      <td>392.204</td>\n",
+       "      <td>391.592</td>\n",
+       "      <td>392.612</td>\n",
+       "      <td>394.211</td>\n",
+       "      <td>395.208</td>\n",
+       "      <td>395.784</td>\n",
+       "      <td>396.108</td>\n",
+       "      <td>397.148</td>\n",
+       "      <td>399.284</td>\n",
+       "      <td>400.484</td>\n",
+       "      <td>394.880</td>\n",
+       "      <td>392.425</td>\n",
+       "      <td>397.336</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -140,19 +254,31 @@
       ],
       "text/plain": [
        "   Year      Jan      Feb      Mar      Apr      May      Jun      Jul  \\\n",
-       "0  2018  352.125  353.332  355.109  357.725  358.741  360.277  361.296   \n",
-       "1  2019  369.294  371.743  373.265  375.066  375.869  378.241  379.331   \n",
-       "2  2020  385.738  386.813  387.573  389.571  390.476  391.458  392.021   \n",
-       "3  2021  391.601  392.372  392.227  391.614  392.634  394.234  395.231   \n",
+       "0  2012  288.915  289.660  290.936  291.511  292.280  292.729  293.165   \n",
+       "1  2013  295.013  295.468  295.811  296.433  297.487  297.973  298.280   \n",
+       "2  2014  301.367  302.079  301.907  302.351  302.717  303.586  304.888   \n",
+       "3  2015  309.380  310.319  311.712  312.195  313.094  314.217  315.232   \n",
+       "4  2016  321.164  322.208  323.991  324.650  326.181  327.527  329.324   \n",
+       "5  2017  337.578  338.948  339.298  340.053  340.212  341.127  343.367   \n",
+       "6  2018  352.105  353.312  355.088  357.704  358.720  360.256  361.275   \n",
+       "7  2019  369.273  371.721  373.243  375.044  375.847  378.219  379.309   \n",
+       "8  2020  385.716  386.791  387.550  389.549  390.454  391.436  391.998   \n",
+       "9  2021  391.579  392.349  392.204  391.592  392.612  394.211  395.208   \n",
        "\n",
        "       Aug      Sep      Oct      Nov      Dec   Annual    HALF1    HALF2  \n",
-       "0  362.709  364.493  365.443  366.574  367.831  360.471  356.218  364.724  \n",
-       "1  380.668  381.832  382.524  384.010  384.958  378.067  373.913  382.221  \n",
-       "2  392.128  391.998  391.973  391.008  391.045  390.150  388.605  391.696  \n",
-       "3  395.806  396.130  397.170  399.307  400.507  394.903  392.447  397.359  "
+       "0  293.548  293.979  294.332  294.580  295.019  292.554  291.005  294.104  \n",
+       "1  298.911  299.477  299.905  300.434  300.730  297.994  296.364  299.623  \n",
+       "2  305.757  306.388  307.260  308.346  308.746  304.616  302.335  306.898  \n",
+       "3  316.270  316.513  317.756  318.482  320.054  314.602  311.820  317.385  \n",
+       "4  330.770  331.974  332.895  334.464  335.713  328.405  324.287  332.523  \n",
+       "5  345.138  346.393  347.782  349.168  350.535  343.300  339.536  347.064  \n",
+       "6  362.689  364.472  365.422  366.553  367.809  360.450  356.198  364.703  \n",
+       "7  380.646  381.810  382.502  383.988  384.936  378.045  373.891  382.199  \n",
+       "8  392.106  391.975  391.950  390.986  391.023  390.128  388.583  391.673  \n",
+       "9  395.784  396.108  397.148  399.284  400.484  394.880  392.425  397.336  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,9 +292,155 @@
     "\n",
     "# create a Pandas dataframe from a csv file\n",
     "apparel_df = pd.read_csv(file_path)\n",
-    "foodway_df = pd.read_csv(file_path_2)\n",
+    "foodaway_df = pd.read_csv(file_path_2)\n",
     "housing_df = pd.read_csv(file_path_3)\n",
     "housing_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Select Annual Data for each dataframe\n",
+    "apparel_df = apparel_df['Annual']\n",
+    "foodaway_df = foodaway_df['Annual']\n",
+    "housing_df = housing_df['Annual']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Rename the columns\n",
+    "apparel_df= apparel_df.rename(columns={\"Annual\":\"Apparel CPI\"})\n",
+    "foodaway_df = foodaway_df.rename(columns={\"Annual\":\"Food Away From Home\"})\n",
+    "housing_df= housing_df.rename(columns={\"Annual\":\"Owners equiv rent\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Apparel CPI</th>\n",
+       "      <th>Food Away From Home</th>\n",
+       "      <th>Owners equiv rent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>113.558</td>\n",
+       "      <td>220.626</td>\n",
+       "      <td>292.554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>111.437</td>\n",
+       "      <td>222.293</td>\n",
+       "      <td>297.994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>112.860</td>\n",
+       "      <td>228.346</td>\n",
+       "      <td>304.616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>109.845</td>\n",
+       "      <td>234.689</td>\n",
+       "      <td>314.602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>111.096</td>\n",
+       "      <td>243.517</td>\n",
+       "      <td>328.405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>106.918</td>\n",
+       "      <td>252.992</td>\n",
+       "      <td>343.300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>109.141</td>\n",
+       "      <td>262.108</td>\n",
+       "      <td>360.450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>108.453</td>\n",
+       "      <td>275.222</td>\n",
+       "      <td>378.045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>108.200</td>\n",
+       "      <td>289.773</td>\n",
+       "      <td>390.128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>110.066</td>\n",
+       "      <td>302.717</td>\n",
+       "      <td>394.880</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Apparel CPI  Food Away From Home  Owners equiv rent\n",
+       "0      113.558              220.626            292.554\n",
+       "1      111.437              222.293            297.994\n",
+       "2      112.860              228.346            304.616\n",
+       "3      109.845              234.689            314.602\n",
+       "4      111.096              243.517            328.405\n",
+       "5      106.918              252.992            343.300\n",
+       "6      109.141              262.108            360.450\n",
+       "7      108.453              275.222            378.045\n",
+       "8      108.200              289.773            390.128\n",
+       "9      110.066              302.717            394.880"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Concatenate the dataframes from 2018-2021\n",
+    "\n",
+    "combined_df = pd.concat([apparel_df, foodaway_df, housing_df], axis='columns', join='inner')\n",
+    "combined_df\n"
    ]
   },
   {
