--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "2022                 NaN                         NaN                 NaN"
       ]
      },
-     "execution_count": 491,
+     "execution_count": 514,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "True"
       ]
      },
-     "execution_count": 493,
+     "execution_count": 515,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "str"
       ]
      },
-     "execution_count": 494,
+     "execution_count": 516,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,9 +325,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 525,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year\n",
+       "2012         NaN\n",
+       "2013    0.003144\n",
+       "2014   -0.003800\n",
+       "2015   -0.042601\n",
+       "2016    0.032721\n",
+       "2017    0.007238\n",
+       "2018   -0.011813\n",
+       "2019   -0.034205\n",
+       "2020   -0.015884\n",
+       "2021    0.033091\n",
+       "2022    0.000000\n",
+       "Name: PHL Apparel Annual, dtype: float64"
+      ]
+     },
+     "execution_count": 525,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the percetn changes for each column\n",
     "apparel_pct_change = combined_df[\"PHL Apparel Annual\"].pct_change()\n",
@@ -347,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,29 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create functions to find the greatest annual increase and decrease for a given column\n",
-    "class Question_1:\n",
-    "    def chop_rows(dataframe):\n",
-    "        new_df = dataframe.iloc[3:]\n",
-    "        return new_df\n",
-    "    \n",
-    "    def max_max(dataframe):\n",
-    "        largest = dataframe.max()\n",
-    "        return largest\n",
-    "    \n",
-    "    def min_min(dataframe):\n",
-    "        smallest = dataframe.min()\n",
-    "        return smallest\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
        "Name: close, dtype: float64"
       ]
      },
-     "execution_count": 503,
+     "execution_count": 524,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,10 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# IMPORTANT: CPI must be second dataframe entered into concat\n",
+    "\n",
     "def concat_stocks_cpi(stock, cpi):\n",
     "    df = pd.concat([stock,cpi], axis=1, join=\"inner\")\n",
     "    return df \n",
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +595,52 @@
    ],
    "source": [
     "combined_charts = food_plot + Housing_plot + apparel_plot\n",
-    "combined_charts"
+    "combined_charts\n",
+    "# create a dropdown menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 534,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create functions to find the greatest annual increase and decrease for a given column\n",
+    "class Question_1:\n",
+    "    def chop_rows(dataframe):\n",
+    "        new_df = dataframe.iloc[3:]\n",
+    "        return new_df\n",
+    "    \n",
+    "    def max_max(dataframe):\n",
+    "        largest = dataframe.max()\n",
+    "        return largest\n",
+    "    \n",
+    "    def min_min(dataframe):\n",
+    "        smallest = dataframe.min()\n",
+    "        return smallest\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_max(df):\n",
+    "    return df[df.iloc[:, 1] == df.iloc[:, 1].max()]\n",
+    "\n",
+    "def extract_min(df):\n",
+    "     return df[df.iloc[:, 1] == df.iloc[:, 1].min()]\n",
+    "\n",
+    "def graph_max(df):\n",
+    "    bar = extract_max(df)\n",
+    "    graph = bar.plot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI Best year and cooresponding stock data\")\n",
+    "    return graph\n",
+    "\n",
+    "def graph_min(df):\n",
+    "    bar = extract_min(df)\n",
+    "    graph = bar.plot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI Best year and cooresponding stock data\")\n",
+    "    return graph\n"
    ]
   }
  ],
