--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -454,9 +454,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 743,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.holoviews_exec.v0+json": "",
+      "text/html": [
+       "<div id='17065'>\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "  <div class=\"bk-root\" id=\"b65554f0-d33e-4298-b048-e3cfe7437024\" data-root-id=\"17065\"></div>\n",
+       "</div>\n",
+       "<script type=\"application/javascript\">(function(root) {\n",
+       "  function embed_document(root) {\n",
+       "    var docs_json = {\"0c62dd80-7c61-49c6-b2ea-65e51910cfea\":{\"defs\":[{\"extends\":null,\"module\":null,\"name\":\"ReactiveHTML1\",\"overrides\":[],\"properties\":[]},{\"extends\":null,\"module\":null,\"name\":\"FlexBox1\",\"overrides\":[],\"properties\":[{\"default\":\"flex-start\",\"kind\":null,\"name\":\"align_content\"},{\"default\":\"flex-start\",\"kind\":null,\"name\":\"align_items\"},{\"default\":\"row\",\"kind\":null,\"name\":\"flex_direction\"},{\"default\":\"wrap\",\"kind\":null,\"name\":\"flex_wrap\"},{\"default\":\"flex-start\",\"kind\":null,\"name\":\"justify_content\"}]},{\"extends\":null,\"module\":null,\"name\":\"TemplateActions1\",\"overrides\":[],\"properties\":[{\"default\":0,\"kind\":null,\"name\":\"open_modal\"},{\"default\":0,\"kind\":null,\"name\":\"close_modal\"}]},{\"extends\":null,\"module\":null,\"name\":\"MaterialTemplateActions1\",\"overrides\":[],\"properties\":[{\"default\":0,\"kind\":null,\"name\":\"open_modal\"},{\"default\":0,\"kind\":null,\"name\":\"close_modal\"}]}],\"roots\":{\"references\":[{\"attributes\":{},\"id\":\"17113\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"coordinates\":null,\"group\":null,\"text\":\"CPI Best year and cooresponding stock data\",\"text_color\":\"black\",\"text_font_size\":\"12pt\"},\"id\":\"17071\",\"type\":\"Title\"},{\"attributes\":{\"tools\":[{\"id\":\"17069\"},{\"id\":\"17086\"},{\"id\":\"17087\"},{\"id\":\"17088\"},{\"id\":\"17089\"},{\"id\":\"17090\"}]},\"id\":\"17092\",\"type\":\"Toolbar\"},{\"attributes\":{},\"id\":\"17122\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"factors\":[\"Commerical Food stocks\",\"Philly Commerical Food CPI\"],\"palette\":[\"#30a2da\",\"#fc4f30\"]},\"id\":\"17099\",\"type\":\"CategoricalColorMapper\"},{\"attributes\":{\"bottom_units\":\"screen\",\"coordinates\":null,\"fill_alpha\":0.5,\"fill_color\":\"lightgrey\",\"group\":null,\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":1.0,\"line_color\":\"black\",\"line_dash\":[4,4],\"line_width\":2,\"right_units\":\"screen\",\"syncable\":false,\"top_units\":\"screen\"},\"id\":\"17091\",\"type\":\"BoxAnnotation\"},{\"attributes\":{},\"id\":\"17086\",\"type\":\"SaveTool\"},{\"attributes\":{},\"id\":\"17110\",\"type\":\"CategoricalTickFormatter\"},{\"attributes\":{\"axis\":{\"id\":\"17079\"},\"coordinates\":null,\"grid_line_color\":null,\"group\":null,\"ticker\":null},\"id\":\"17081\",\"type\":\"Grid\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.2},\"fill_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"hatch_alpha\":{\"value\":0.2},\"hatch_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"line_alpha\":{\"value\":0.2},\"top\":{\"field\":\"value\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"xoffsets\"}},\"id\":\"17105\",\"type\":\"VBar\"},{\"attributes\":{},\"id\":\"17087\",\"type\":\"PanTool\"},{\"attributes\":{\"callback\":null,\"renderers\":[{\"id\":\"17106\"}],\"tags\":[\"hv_created\"],\"tooltips\":[[\"index\",\"@{index}\"],[\"Variable\",\"@{Variable}\"],[\"value\",\"@{value}\"]]},\"id\":\"17069\",\"type\":\"HoverTool\"},{\"attributes\":{},\"id\":\"17090\",\"type\":\"ResetTool\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"HSpacer25811\",\"sizing_mode\":\"stretch_width\"},\"id\":\"17066\",\"type\":\"Spacer\"},{\"attributes\":{},\"id\":\"17088\",\"type\":\"WheelZoomTool\"},{\"attributes\":{\"source\":{\"id\":\"17100\"}},\"id\":\"17107\",\"type\":\"CDSView\"},{\"attributes\":{\"overlay\":{\"id\":\"17091\"}},\"id\":\"17089\",\"type\":\"BoxZoomTool\"},{\"attributes\":{\"children\":[{\"id\":\"17066\"},{\"id\":\"17070\"},{\"id\":\"17135\"}],\"margin\":[0,0,0,0],\"name\":\"Row25807\",\"tags\":[\"embedded\"]},\"id\":\"17065\",\"type\":\"Row\"},{\"attributes\":{\"end\":0.058069281229263525,\"reset_end\":0.058069281229263525,\"reset_start\":-0.11047275222129943,\"start\":-0.11047275222129943,\"tags\":[[[\"value\",\"value\",null]]]},\"id\":\"17068\",\"type\":\"Range1d\"},{\"attributes\":{\"margin\":[5,5,5,5],\"name\":\"HSpacer25812\",\"sizing_mode\":\"stretch_width\"},\"id\":\"17135\",\"type\":\"Spacer\"},{\"attributes\":{\"bottom\":{\"value\":0},\"fill_alpha\":{\"value\":1.0},\"fill_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"hatch_alpha\":{\"value\":1.0},\"hatch_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"hatch_scale\":{\"value\":12.0},\"hatch_weight\":{\"value\":1.0},\"line_alpha\":{\"value\":1.0},\"line_cap\":{\"value\":\"butt\"},\"line_color\":{\"value\":\"black\"},\"line_dash\":{\"value\":[]},\"line_dash_offset\":{\"value\":0},\"line_join\":{\"value\":\"bevel\"},\"line_width\":{\"value\":1},\"top\":{\"field\":\"value\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"xoffsets\"}},\"id\":\"17108\",\"type\":\"VBar\"},{\"attributes\":{\"factors\":[[\"2020\",\"Commerical Food stocks\"],[\"2020\",\"Philly Commerical Food CPI\"]],\"tags\":[[[\"index\",\"index\",null],[\"Variable\",\"Variable\",null]]]},\"id\":\"17067\",\"type\":\"FactorRange\"},{\"attributes\":{\"fill_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"hatch_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"top\":{\"field\":\"value\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"xoffsets\"}},\"id\":\"17103\",\"type\":\"VBar\"},{\"attributes\":{},\"id\":\"17075\",\"type\":\"CategoricalScale\"},{\"attributes\":{\"coordinates\":null,\"data_source\":{\"id\":\"17100\"},\"glyph\":{\"id\":\"17103\"},\"group\":null,\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"17105\"},\"nonselection_glyph\":{\"id\":\"17104\"},\"selection_glyph\":{\"id\":\"17108\"},\"view\":{\"id\":\"17107\"}},\"id\":\"17106\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"axis_label\":\"Year\",\"coordinates\":null,\"formatter\":{\"id\":\"17110\"},\"group\":null,\"major_label_orientation\":1.5707963267948966,\"major_label_policy\":{\"id\":\"17111\"},\"ticker\":{\"id\":\"17080\"}},\"id\":\"17079\",\"type\":\"CategoricalAxis\"},{\"attributes\":{},\"id\":\"17111\",\"type\":\"AllLabels\"},{\"attributes\":{},\"id\":\"17077\",\"type\":\"LinearScale\"},{\"attributes\":{},\"id\":\"17083\",\"type\":\"BasicTicker\"},{\"attributes\":{},\"id\":\"17080\",\"type\":\"CategoricalTicker\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.1},\"fill_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"hatch_alpha\":{\"value\":0.1},\"hatch_color\":{\"field\":\"Variable\",\"transform\":{\"id\":\"17099\"}},\"line_alpha\":{\"value\":0.1},\"top\":{\"field\":\"value\"},\"width\":{\"value\":0.8},\"x\":{\"field\":\"xoffsets\"}},\"id\":\"17104\",\"type\":\"VBar\"},{\"attributes\":{},\"id\":\"17114\",\"type\":\"AllLabels\"},{\"attributes\":{\"axis_label\":\"Percentage change\",\"coordinates\":null,\"formatter\":{\"id\":\"17113\"},\"group\":null,\"major_label_policy\":{\"id\":\"17114\"},\"ticker\":{\"id\":\"17083\"}},\"id\":\"17082\",\"type\":\"LinearAxis\"},{\"attributes\":{\"below\":[{\"id\":\"17079\"}],\"center\":[{\"id\":\"17081\"},{\"id\":\"17085\"}],\"height\":300,\"left\":[{\"id\":\"17082\"}],\"margin\":[5,5,5,5],\"min_border_bottom\":10,\"min_border_left\":10,\"min_border_right\":10,\"min_border_top\":10,\"renderers\":[{\"id\":\"17106\"}],\"sizing_mode\":\"fixed\",\"title\":{\"id\":\"17071\"},\"toolbar\":{\"id\":\"17092\"},\"width\":700,\"x_range\":{\"id\":\"17067\"},\"x_scale\":{\"id\":\"17075\"},\"y_range\":{\"id\":\"17068\"},\"y_scale\":{\"id\":\"17077\"}},\"id\":\"17070\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{\"axis\":{\"id\":\"17082\"},\"coordinates\":null,\"dimension\":1,\"grid_line_color\":null,\"group\":null,\"ticker\":null},\"id\":\"17085\",\"type\":\"Grid\"},{\"attributes\":{\"data\":{\"Variable\":[\"Commerical Food stocks\",\"Philly Commerical Food CPI\"],\"index\":[\"2020\",\"2020\"],\"value\":{\"__ndarray__\":\"WL5qYnqvuL8AW54QVIqmPw==\",\"dtype\":\"float64\",\"order\":\"little\",\"shape\":[2]},\"xoffsets\":[[\"2020\",\"Commerical Food stocks\"],[\"2020\",\"Philly Commerical Food CPI\"]]},\"selected\":{\"id\":\"17101\"},\"selection_policy\":{\"id\":\"17122\"}},\"id\":\"17100\",\"type\":\"ColumnDataSource\"},{\"attributes\":{},\"id\":\"17101\",\"type\":\"Selection\"}],\"root_ids\":[\"17065\"]},\"title\":\"Bokeh Application\",\"version\":\"2.4.1\"}};\n",
+       "    var render_items = [{\"docid\":\"0c62dd80-7c61-49c6-b2ea-65e51910cfea\",\"root_ids\":[\"17065\"],\"roots\":{\"17065\":\"b65554f0-d33e-4298-b048-e3cfe7437024\"}}];\n",
+       "    root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
+       "  }\n",
+       "  if (root.Bokeh !== undefined && root.Bokeh.Panel !== undefined) {\n",
+       "    embed_document(root);\n",
+       "  } else {\n",
+       "    var attempts = 0;\n",
+       "    var timer = setInterval(function(root) {\n",
+       "      if (root.Bokeh !== undefined && root.Bokeh.Panel !== undefined) {\n",
+       "        clearInterval(timer);\n",
+       "        embed_document(root);\n",
+       "      } else if (document.readyState == \"complete\") {\n",
+       "        attempts++;\n",
+       "        if (attempts > 200) {\n",
+       "          clearInterval(timer);\n",
+       "          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n",
+       "        }\n",
+       "      }\n",
+       "    }, 25, root)\n",
+       "  }\n",
+       "})(window);</script>"
+      ],
+      "text/plain": [
+       ":Bars   [index,Variable]   (value)"
+      ]
+     },
+     "execution_count": 743,
+     "metadata": {
+      "application/vnd.holoviews_exec.v0+json": {
+       "id": "17065"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def extract_max(df):\n",
     "    return df[df.iloc[:, 1] == df.iloc[:, 1].max()]\n",
@@ -473,9 +528,6 @@
     "    bar = extract_min(df)\n",
     "    graph = bar.hvplot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI Best year and cooresponding stock data\", rot=90)\n",
     "    return graph\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
