--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 776,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,12 +466,12 @@
     "\n",
     "def graph_max(df):\n",
     "    bar = extract_max(df)\n",
-    "    graph = bar.hvplot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI highest year and cooresponding stock data\", rot=90)\n",
+    "    graph = bar.hvplot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI highest year and cooresponding stock data\", rot=90, height=400)\n",
     "    return graph\n",
     "\n",
     "def graph_min(df):\n",
     "    bar = extract_min(df)\n",
-    "    graph = bar.hvplot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI lowest year and cooresponding stock data\", rot=90)\n",
+    "    graph = bar.hvplot.bar(ylabel=\"Percentage change\", xlabel=\"Year\", title=\"CPI lowest year and cooresponding stock data\", rot=90, height=400)\n",
     "    return graph\n",
     "\n"
    ]
