--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -498,7 +498,7 @@
     "\n",
     "def graph_max_trade_count(df_stocks, df_cpi,column_name):\n",
     "    data = combine_cpi_trade_count(df_stocks,df_cpi).sort_values(by=f\"{column_name}\")\n",
-    "    highest_inflation = data.iloc[-3:]\n",
+    "    highest_inflation = data.iloc[:]\n",
     "    plot = px.scatter(highest_inflation,x=f\"{column_name}\", y=\"trade_count\")\n",
     "    return plot\n",
     "\n",
