--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 779,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
     "def graph_max_trade_count(df_stocks, df_cpi,column_name):\n",
     "    data = combine_cpi_trade_count(df_stocks,df_cpi).sort_values(by=f\"{column_name}\")\n",
     "    highest_inflation = data.iloc[:]\n",
-    "    plot = px.scatter(highest_inflation,x=f\"{column_name}\", y=\"trade_count\")\n",
+    "    plot = px.scatter(highest_inflation,x=f\"{column_name}\", y=\"trade_count\", size=\"trade_count\")\n",
     "    return plot\n",
     "\n",
     "\n",
