--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -11,7 +11,8 @@
     "from dotenv import load_dotenv\n",
     "import alpaca_trade_api as tradeapi\n",
     "import os\n",
-    "import plotly.express as px\n"
+    "import plotly.express as px\n",
+    "import holoviews as hv\n"
    ]
   },
   {
@@ -498,10 +499,9 @@
     "\n",
     "def graph_max_trade_count(df_stocks, df_cpi,column_name):\n",
     "    data = combine_cpi_trade_count(df_stocks,df_cpi).sort_values(by=f\"{column_name}\")\n",
-    "    highest_inflation = data.iloc[:]\n",
-    "    plot = px.scatter(highest_inflation,x=f\"{column_name}\", y=\"trade_count\", size=\"trade_count\")\n",
+    "    highest_inflation = data.iloc[-3:]\n",
+    "    plot = highest_inflation.hvplot.scatter(x=f\"{column_name}\", y=\"trade_count\", xlabel=\"CPI Percent Change\",ylabel=\"Trade Count\",title=\"Trade count during High inflation\", legend=\"top_left\")\n",
     "    return plot\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -509,7 +509,10 @@
     "\n",
     "Philly_real_estate_scatter = graph_max_trade_count(Real_Estate_stocks,Housing_pct_change,\"PHL Housing Annual\")\n",
     "Philly_apparel_scatter = graph_max_trade_count(Apparel_stocks, apparel_pct_change, \"PHL Apparel Annual\")\n",
-    "Philly_food_scatter = graph_max_trade_count(Food_stocks, Food_pct_change, \"PHL Commercial Food Annual\")\n"
+    "Philly_food_scatter = graph_max_trade_count(Food_stocks, Food_pct_change, \"PHL Commercial Food Annual\")\n",
+    "\n",
+    "combined_scatter = hv.NdOverlay({'Housing Stocks and CPI':Philly_real_estate_scatter,'Commercial Food Stocks and CPI': Philly_food_scatter, 'Apparel Stocks and CPI':Philly_apparel_scatter})\n",
+    "\n"
    ]
   }
  ],
